--- a/public/Nitrocid.Core/Nitrocid.Core.csproj
+++ b/public/Nitrocid.Core/Nitrocid.Core.csproj
@@ -10,12 +10,12 @@
     <PackageProjectUrl>https://github.com/Aptivi/Nitrocid</PackageProjectUrl>
     <PackageIcon>OfficialAppIcon-NitrocidKS-512.png</PackageIcon>
     <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
-    <PackageReleaseNotes>Detailed explanation: https://aptivi.gitbook.io/aptivi/nitrocid-ks-manual/versions-and-compatibility/version-release-notes/v0.1.x.x-series-1</PackageReleaseNotes>
+    <PackageReleaseNotes>Detailed explanation: https://aptivi.gitbook.io/aptivi/nitrocid-ks-manual/versions-and-compatibility/version-release-notes/v0.1.x.x-series-2</PackageReleaseNotes>
     <!-- MSBuild Tags -->
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <PackageOutputPath>../Nitrocid/KSBuild</PackageOutputPath>
+    <PackageOutputPath>../Nitrocid/KSBuild/</PackageOutputPath>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <!-- KS NuGet Information End -->
@@ -29,8 +29,6 @@
     <OutputPath>../Nitrocid/KSBuild/</OutputPath>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-    <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
   </PropertyGroup>
   <!-- KS General Information End -->
 
