upd - Updated libraries
---

Type: upd
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Nitrocid.Extras.Notes.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Nitrocid.Extras.Notes.csproj
@@ -10,6 +10,10 @@
     <PackageReference Include="FluentFTP" Version="52.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="LocaleStation" Version="1.2.0" />
+  </ItemGroup>
+
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <Import Project="..\NitrocidLiteDetector.targets" Condition="'$(NKSLITE)' == 'true'" />
 </Project>
