--- a/public/Nitrocid.Addons/Nitrocid.Extras.Ssh/Nitrocid.Extras.Ssh.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Ssh/Nitrocid.Extras.Ssh.csproj
@@ -15,6 +15,10 @@
     <PackageReference Include="SSH.NET" Version="2025.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="LocaleStation" Version="1.2.0" />
+  </ItemGroup>
+
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <Import Project="..\NitrocidLiteDetector.targets" Condition="'$(NKSLITE)' == 'true'" />
 </Project>
