--- a/public/Nitrocid.Addons/Nitrocid.Extras.Calculators/Nitrocid.Extras.Calculators.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Calculators/Nitrocid.Extras.Calculators.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="StringMath" Version="4.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="LocaleStation" Version="1.2.0" />
+  </ItemGroup>
+
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <Import Project="..\NitrocidLiteDetector.targets" Condition="'$(NKSLITE)' == 'true'" />
 </Project>
