--- a/public/Nitrocid.Addons/Nitrocid.Extras.Diagnostics/Nitrocid.Extras.Diagnostics.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Diagnostics/Nitrocid.Extras.Diagnostics.csproj
@@ -10,6 +10,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Diagnostics.Runtime" Version="3.1.512801" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Update="LocaleStation" Version="1.2.0" />
+  </ItemGroup>
 
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <Import Project="..\NitrocidLiteDetector.targets" Condition="'$(NKSLITE)' == 'true'" />
