--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Nitrocid.Extras.UnitConv.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Nitrocid.Extras.UnitConv.csproj
@@ -13,6 +13,10 @@
     <PackageReference Include="UnitsNet" Version="5.74.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="LocaleStation" Version="1.2.0" />
+  </ItemGroup>
+
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <Import Project="..\NitrocidLiteDetector.targets" Condition="'$(NKSLITE)' == 'true'" />
 </Project>
