--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Nitrocid.LanguagePacks.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Nitrocid.LanguagePacks.csproj
@@ -14,6 +14,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="LocaleStation" Version="1.2.0" />
+  </ItemGroup>
 
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <Import Project="..\NitrocidLiteDetector.targets" Condition="'$(NKSLITE)' == 'true'" />
