--- a/public/Nitrocid.Addons/Nitrocid.SplashPacks/Nitrocid.SplashPacks.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.SplashPacks/Nitrocid.SplashPacks.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\*" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Update="LocaleStation" Version="1.2.0" />
+  </ItemGroup>
 
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <Import Project="..\NitrocidLiteDetector.targets" Condition="'$(NKSLITE)' == 'true'" />
